# kitgen

./: .gitignore  .travis.yml  Makefile  Makefile.vc  README  README.md  README.swisskit  config.sh  genswiss.tcl  kbs.tcl  kitInit.c  makefile.include  pwb.c  rechan.c  setupvfs.tcl  tclkit.rc  validate.tcl  zlib.c
.github/workflows/: main.yml
.travis/: Makefile.nmake  winmake.bat
8.x/itcl/: Makefile.in  configure  configure.in  pkgIndex.tcl.in
8.x/itcl/generic/: itcl.h  itcl_bicmds.c  itcl_class.c  itcl_cmds.c  itcl_methods.c  itcl_objects.c  itcl_util.c
8.x/itcl/tclconfig/: tcl.m4
8.x/itcl/tests/: basic.test  info.test
8.x/itcl/win/: makefile.vc  (+2 more)
8.x/mk/tcl/: .gitignore  Makefile.in  configure  configure.in  mk4tcl.cpp  mk4tcl.h
8.x/mk/tcl/tclconfig/: tcl.m4
8.x/mk/tcl/tests/: basic.test
8.x/tclvfs/: ChangeLog  Makefile.in  configure  configure.in  pkgIndex.tcl.in
8.x/thread/: ChangeLog  configure  configure.in
8.x/vqtcl/: ChangeLog  Makefile.in  README  configure  configure.in  license.terms  pkgIndex.tcl.in
extdefs/: Img.kbs  Itcl.kbs  Itk.kbs  Iwidgets.kbs  Memchan.kbs  Mk4tcl.kbs  Tclx.kbs  Tkhtml.kbs  Tktable.kbs  XOTcl.kbs  incrtcl.kbs  memchan.kbs  mentry.kbs  mk4tcl.kbs  ral.kbs  snack.kbs  sqlite.kbs  sqlite3.kbs  tablelist.kbs  tcllib.kbs  tclral.kbs  tcludp.kbs  tclx.kbs  tdom.kbs  thread.kbs  tklib.kbs  tktable.kbs  tls.kbs  trofs.kbs  udp.kbs  vfs.kbs  vlerq.kbs  wcb.kbs
files/: boot.tcl  config.tcl  tk8.4-pkgIndex.tcl  tk8.5-pkgIndex.tcl  vfs1.3-pkgIndex.tcl  vfs1.4-pkgIndex.tcl  vlerqtcl4.0-pkgIndex.tcl  vqtcl4.1-pkgIndex.tcl
(+78 files in other folders)
